# AlgebraCore

./: .gitignore  DESIGN.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: build.yml  publish.yml  tests.yml
src/AlgebraCore/: __init__.py  basis.py  contraction.py  element.py  indexing.py  product.py  transformation.py
src/AlgebraCore/std/: __init__.py  bases.py  products.py
tests/: test_showcase_catalog.py  test_std_smoke.py
tests/core/basis/: test_basis_validation.py
tests/core/element/: test_element_ops.py  test_element_sub.py
tests/core/isolated/: test_basis.py  test_element.py  test_product.py  test_transformation.py
tests/core/transformation/: test_transformation_contraction.py  test_transformation_select.py  test_transformation_tensor.py
